<resources>
    <string name="app_name" translatable="false">OverRol</string>
    <string name="usuario">User</string>
    <string name="contrasena">Password</string>
    <string name="acceder">Log in</string>
    <string name="bienvenida">¡Welcome!</string>
    <string name="registrarse">Sign in</string>
    <string name="crearficha">Create character sheet</string>
    <string name="Mis_personajes">My characters</string>
    <string name="Recordar_contrasena">Remember a password</string>
    <string name="Dados">Dices</string>
    <string name="NoAceptoRecibirPromociones">I do not accept to receive marketing communications</string>
    <string name="AceptoRecibirPromociones">I agree to receive marketing communications</string>
    <string name="nombre">Username</string>
    <string name="hombre">Male</string>
    <string name="mujer">Female</string>
    <string name="otro">Other...</string>
    <string name="atras">Return</string>
    <string name="RepetirContrasena">Repeat password</string>
    <string name="Genero">Gender</string>
    <string name="TerminarRegistro">Finish registration</string>
    <string name="email">Email</string>
    <string name="autenticar">Authenticate</string>
    <string name="RegresarALLogin">Return</string>
    <string name="CambiarImagen">Change image</string>
    <string name="NecesitasHabilitarPermisos">You need to enable permissions</string>
    <string name="NombreDelPersonaje">Character name:</string>
    <string name="Raza">Race:</string>
    <string name="Elfo">Elven</string>
    <string name="Alineamiento">Alignment:</string>
    <string name="Inspiracion">Inspiration</string>
    <string name="Fuerza">Strength</string>
    <string name="Destreza">Dexterity</string>
    <string name="Constitucion">Constitution</string>
    <string name="Inteligencia">Intelligence</string>
    <string name="Sabiduria">Wisdom</string>
    <string name="Carisma">Charisma</string>
    <string name="ClaseArmadura">Armor class</string>
    <string name="Iniciativa">Initiative</string>
    <string name="Velocidad">Speed</string>
    <string name="Atributos">Attributes</string>
    <string name="GolpesMaximos">Hit point maximum</string>
    <string name="GolpesActuales">Current hit points</string>
    <string name="GolpesTemporales">Temporary hit points</string>
    <string name="D4">Dice D4</string>
    <string name="D6">Dice D6</string>
    <string name="D8">Dice D8</string>
    <string name="D10">Dice D10</string>
    <string name="D12">Dice D12</string>
    <string name="D20">Dice D20</string>
    <string name="D100">Dice D100</string>
    <string name="CrearPersonaje">Create character</string>
    <string name="Undado">1 Dice</string>
    <string name="MasDados">More dice</string>
    <string name="CantidadDeDados">Number of dice</string>
</resources>