<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#373737"
    tools:context=".inicio">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_above="@+id/btnDados"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="-3dp"
        android:layout_marginLeft="-3dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="8dp"
        app:srcCompat="@drawable/overline_4" />

    <Button
        android:id="@+id/btnDados"
        android:layout_width="363dp"
        android:layout_height="73dp"
        android:layout_above="@+id/btnFicha"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="33dp"
        android:fontFamily="@font/gruppo"
        android:onClick="Daditos"
        android:text="@string/Dados"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:backgroundTint="@color/Naranja" />

    <Button
        android:id="@+id/btnFicha"
        android:layout_width="363dp"
        android:layout_height="73dp"
        android:layout_above="@+id/btnPersonajes"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="33dp"
        android:fontFamily="@font/gruppo"
        android:onClick="CrearFicha"
        android:text="@string/crearficha"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:backgroundTint="@color/Naranja" />

    <Button
        android:id="@+id/btnPersonajes"
        android:layout_width="363dp"
        android:layout_height="73dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="144dp"
        android:fontFamily="@font/gruppo"
        android:text="@string/Mis_personajes"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:backgroundTint="@color/Naranja" />

    <ImageView
        android:id="@+id/imgSonido"
        android:layout_width="90dp"
        android:layout_height="85dp"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="323dp"
        android:layout_marginRight="323dp"
        android:layout_marginBottom="198dp"
        android:onClick="PoneryQuitarmusica"
        android:tint="@color/Naranja"
        app:srcCompat="@drawable/volume" />

</RelativeLayout>