<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#373737"
    tools:context=".Resgistro" >

    <LinearLayout
        android:id="@+id/icono"
        android:layout_width="373dp"
        android:layout_height="133dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" >

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/overline_4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/boton"
        android:layout_width="325dp"
        android:layout_height="86dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952">

        <Button
            android:id="@+id/button5"
            android:layout_width="271dp"
            android:layout_height="82dp"
            android:layout_weight="1"
            android:background="#FFB952"
            android:text="Button"
            android:textColor="#000000"
            app:backgroundTint="#FFB952" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/padre"
        android:layout_width="366dp"
        android:layout_height="351dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523">

        <LinearLayout
            android:id="@+id/v1"
            android:layout_width="95dp"
            android:layout_height="356dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/h1"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="10dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/nombre_de_usuario" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/h2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="10dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/genero" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/h3"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="10dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/en" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/h4"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="10dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/candado" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/h5"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="10dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/sincronizar" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/v2"
            android:layout_width="match_parent"
            android:layout_height="356dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/h11"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/nombre"
                    android:inputType="textPersonName"
                    android:textColor="#FFB952" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/12"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:id="@+id/h13"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:id="@+id/h14"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal"></LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RadioGroup
        android:layout_width="359dp"
        android:layout_height="78dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.825">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:fontFamily="@font/gruppo"
            android:keepScreenOn="true"
            android:text="@string/AceptoRecibirPromociones"
            android:textColor="#FFB952"
            android:textStyle="bold|italic" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gruppo"
            android:text="@string/NoAceptoRecibirPromociones"
            android:textColor="#FFB952"
            android:textStyle="bold|italic" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>

